--- a/src/samples/SimpleToggleSwitch.mxml
+++ b/src/samples/SimpleToggleSwitch.mxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark" title="SimpleToggleSwitch">
+		xmlns:s="library://ns.adobe.com/flex/spark" 
+		title="{data.name}">
 	<s:layout>
 		<s:VerticalLayout/>
 	</s:layout>
